# Golden

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  output_test
Engine/: CMakeLists.txt
Engine/archive/include/core/: pathfinding.txt  scriptable.txt
Engine/archive/include/extension/: old_grid.txt  simulation.txt
Engine/archive/src/extension/: old_grid.txt
Engine/assets/models/agents/: LittleKnight.glb  Sprig.glb  WhiskersLOD1.glb  WhiskersLOD2.glb
Engine/assets/models/entities/: ant1.glb
Engine/assets/models/products/: berry.glb  grass.glb  grass1.glb
Engine/assets/models/text/: 0.glb  1.glb  2.glb  3.glb  dot.glb
Engine/ext/glad/include/: glad.h
Engine/ext/glad/src/: glad.c
Engine/ext/glm/detail/: setup.hpp
Engine/include/core/: GDSL.hpp  data.hpp  gpu_allocator.hpp  grid.hpp  grid2d.hpp  helper.hpp  input.hpp  metal.mm  numGrid.hpp  object.hpp  pathfinding.hpp  physics.hpp  singleton.hpp  storage.hpp  thread.hpp  type.hpp  worldgen.hpp
Engine/include/experiment/: gpuType.hpp
Engine/include/extension/: cell_object.hpp  old_grid.hpp  physics.hpp
Engine/include/gui/: gui_core.hpp  gui_manager.hpp  gui_widgets.hpp  quad.hpp  text.hpp  text_test.hpp  twig.hpp
Engine/include/rendering/: camera.hpp  geom.hpp  model.hpp  passes.hpp  render_pass.hpp  renderer.hpp  scene.hpp  scene_object.hpp  single.hpp
Engine/include/util/: DSL_util.hpp  basic.hpp  bit_list.hpp  cog.hpp  color.hpp  d_list.hpp  engine_util.hpp  files.hpp  group.hpp  list.hpp  logger.hpp  map.hpp  meshBuilder.hpp  ml_core.hpp  ml_methods.hpp  ml_util.hpp  nodenet.hpp  q_any.hpp  q_list.hpp  q_map.hpp  q_object.hpp  qd_list.hpp  string_generator.hpp  util.hpp
Engine/scripts/: quad.gld
Engine/shaders/: depth_frag.glsl  depth_vert.glsl  depth_vertI.glsl  fragment.glsl  gui_frag.glsl  gui_fragi.glsl  gui_vert.glsl  gui_verti.glsl  vertex.glsl  vertexI.glsl
Engine/src/core/: glad.cpp  main.txt  object.cpp  pathfinding.cpp  scriptable.cpp
Engine/src/extension/: cell_object.cpp
Engine/src/gui/: quad.cpp  text.cpp
Engine/src/rendering/: camera.cpp  geom.cpp  model.cpp  passes.cpp  renderer.cpp  scene.cpp  scene_object.cpp  single.cpp
Engine/src/util/: engine_util.cpp  meshBuilder.cpp  util.cpp
Projects/AvalVentures/: CMakeLists.txt
Projects/AvalVentures/assets/images/: backup.json  char1.json  farmlogic.json  farmlogic2.json  farmlogic3.json  framlogic_backup.json  meta.json  process.json  process2.json  process3.json  process_meta.json
Projects/AvalVentures/assets/models/: AvalVentures - data.csv
Projects/AvalVentures/include/: farmlogic.hpp  markdown_table.hpp  materials.hpp  phys_system.hpp  process.hpp
Projects/AvalVentures/src/: main.cpp
Projects/ChatTest/: CMakeLists.txt
Projects/ChatTest/assets/gui/: ctest.fab
Projects/ChatTest/src/: main.cpp
Projects/Dueling/: CMakeLists.txt
Projects/Dueling/include/duel/: agent.hpp  duelManager.hpp  duel_object.hpp  effect.hpp  gui_object.hpp  spell.hpp  spellForm.hpp  spellList.hpp  turnManager.hpp  types.hpp
Projects/Dueling/models/: firebolt.glb  fox.glb  hurt.glb  magebolt.glb  magepop.glb  pop.glb  shard.glb  shield.glb  strip.glb  weasel.glb
Projects/Dueling/src/: agent.cpp  effect.cpp  gui_object.cpp  main.cpp  spell.cpp  spellForm.cpp  spellList.cpp
Projects/Emergence/: CMakeLists.txt
Projects/Emergence/src/: main.cpp
Projects/FirChess/: CMakeLists.txt
Projects/FirChess/assets/games/: auto.gdc  book.odc
Projects/FirChess/assets/gui/: firchessgui.fab
Projects/FirChess/assets/models/: FirChess - data.csv  bishop_black.glb  bishop_white.glb  board.glb  ccc  king_black.glb  king_white.glb  knight_black.glb  knight_white.glb  pawn_black.glb  pawn_white.glb  queen_black.glb  queen_white.glb  rook_black.glb  rook_white.glb
Projects/FirChess/src/: main.cpp  storage.txt
Projects/FirML/: CMakeLists.txt
Projects/FirML/include/: MNIST.hpp  archive_core.hpp  archive_ml_util.hpp  archive_mnist.hpp  archive_tensor.hpp  cog_lang_test.hpp  core.hpp  ml_util.hpp  tensor.hpp
Projects/FirML/src/: main.cpp  methods.mm
Projects/Fshgame/: CMakeLists.txt
Projects/Fshgame/include/fsh/: f_object.hpp  fsh_scene.hpp
Projects/Fshgame/src/: main.cpp  test.csv
Projects/Fshgame/storage/: guide.gmdl  guide.gscn
Projects/Golden_alpha/: CMakeLists.txt
Projects/Golden_alpha/include/: generator.hpp  golden_grid.hpp  grid_pathfinder.hpp
Projects/Golden_alpha/src/: golden_grid.cpp  main.cpp
Projects/Lab/: CMakeLists.txt
Projects/Lab/src/: 2dPlatformer.txt  FloorTest.txt  GoldenVsCThreads.txt  cpptest.cpp  graphics.txt  main.cpp  stress_test.gdsl  stresstest  stresstest.txt
Projects/Learning/: CMakeLists.txt
Projects/Learning/include/: perf_q_list.hpp
Projects/Learning/src/: MPHT.txt  main.cpp  main.txt  smartlist.txt
Projects/StudentSystem/: CMakeLists.txt
Projects/StudentSystem/assets/gui/: ssgui.fab
Projects/StudentSystem/assets/images/: Flotsam - data.csv  fab1.fab  fab2.fab
Projects/StudentSystem/src/: Flotsam.txt  Generator.txt  main.cpp
Projects/Testing/: CMakeLists.txt
Projects/Testing/assets/models/: Snow.glb  testwiggle.glb
Projects/Testing/include/: Golden.hpp  Golden008.txt  Golden010.txt  testGrid.hpp  testSim.hpp  test_object.hpp
Projects/Testing/include/linking/: one.hpp  three.hpp  two.hpp
Projects/Testing/src/: FirsFlock.txt  ScrewTest.txt  backup.gld  backup3.gld  golden.gld  main.cpp  stresstest.gld  tempCodeRunnerFile.gld  test.gld  test1.txt  test3.txt  test4.txt  test5.txt  text2.txt
Projects/Testing/storage/: test.txt
Projects/TheGolden/: CMakeLists.txt
Projects/TheGolden/src/: Feb12Archive.txt  Feb13Archive.txt  Feb16Archive.txt  Feb2Archive.txt  Feb6Archive.txt  Feb8Archive.txt  MLtest.txt  exp.txt  feb18Archive.txt  main.cpp
Projects/ThreadTest/: CMakeLists.txt
Projects/ThreadTest/include/: multiply_shader.metal  partner_sim.hpp  test_gpu_computer.hpp  test_q_list.hpp  testing_sim.hpp
Projects/ThreadTest/src/: main.cpp  storage.txt  storage2.txt  test_gpu_computer.mm
Projects/ThymeLoop/: CMakeLists.txt
Projects/ThymeLoop/src/: main.cpp
(+100 files in other folders)
